Updated page Scenegraph/cs

--- a/wiki/cs/Scenegraph.html
+++ b/wiki/cs/Scenegraph.html
@@ -87,12 +87,12 @@ Separator<span class="w"> </span><span class="o">{</span><span class="w"> </span
 <ul><li><b>FreeCAD scripting:</b> <a href="../index.php?title=Python/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python/cs (page does not exist)">Python</a>, <a href="../cs/Introduction_to_Python.html" title="Introduction to Python/cs">Introduction to Python</a>, <a href="../cs/Python_scripting_tutorial.html" title="Python scripting tutorial/cs">Python scripting tutorial</a>, <a href="../cs/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/cs">FreeCAD Scripting Basics</a></li></ul>
 <hr>
 <ul><li><b>Modules:</b> <a href="../index.php?title=Builtin_modules/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Builtin modules/cs (page does not exist)">Builtin modules</a>, <a href="../cs/Units.html" title="Units/cs">Units</a>, <a href="../cs/Quantity.html" title="Quantity/cs">Quantity</a></li>
-<li><b>Workbenches:</b> <a href="../index.php?title=Workbench_creation/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Workbench creation/cs (page does not exist)">Workbench creation</a>, <a href="../cs/Gui_Command.html" title="Gui Command/cs">Gui Commands</a>, <a href="../index.php?title=Command/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Command/cs (page does not exist)">Commands</a>, <a href="../index.php?title=Installing_more_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Installing more workbenches/cs (page does not exist)">Installing more workbenches</a></li>
+<li><b>Workbenches:</b> <a href="../cs/Workbench_creation.html" title="Workbench creation/cs">Workbench creation</a>, <a href="../cs/Gui_Command.html" title="Gui Command/cs">Gui Commands</a>, <a href="../index.php?title=Command/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Command/cs (page does not exist)">Commands</a>, <a href="../index.php?title=Installing_more_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Installing more workbenches/cs (page does not exist)">Installing more workbenches</a></li>
 <li><b>Meshes and Parts:</b> <a href="../cs/Mesh_Scripting.html" title="Mesh Scripting/cs">Mesh Scripting</a>, <a href="../cs/Topological_data_scripting.html" title="Topological data scripting/cs">Topological data scripting</a>, <a href="../cs/Mesh_to_Part.html" title="Mesh to Part/cs">Mesh to Part</a>, <a href="../cs/PythonOCC.html" title="PythonOCC/cs">PythonOCC</a></li></ul>
 <hr>
 <ul><li><b>Parametric objects:</b> <a href="../cs/Scripted_objects.html" title="Scripted objects/cs">Scripted objects</a>, <a href="../index.php?title=Viewprovider/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Viewprovider/cs (page does not exist)">Viewproviders</a> <small>(<a href="../index.php?title=Custom_icon_in_tree_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Custom icon in tree view/cs (page does not exist)">Custom icon in tree view</a>)</small></li>
 <li><b>Scenegraph:</b> <a class="mw-selflink selflink">Coin (Inventor) scenegraph</a>, <a href="../cs/Pivy.html" title="Pivy/cs">Pivy</a></li>
-<li><b>Graphical interface:</b> <a href="../index.php?title=Interface_creation/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface creation/cs (page does not exist)">Interface creation</a>, <a href="../cs/Dialog_creation.html" title="Dialog creation/cs">Interface creation completely in Python</a> <small>(<a href="../index.php?title=Dialog_creation_with_various_widgets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation with various widgets/cs (page does not exist)">1</a>, <a href="../index.php?title=Dialog_creation_reading_and_writing_files/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation reading and writing files/cs (page does not exist)">2</a>, <a href="../index.php?title=Dialog_creation_setting_colors/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation setting colors/cs (page does not exist)">3</a>, <a href="../index.php?title=Dialog_creation_image_and_animated_GIF/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation image and animated GIF/cs (page does not exist)">4</a>, <a href="../index.php?title=PySide_usage_snippets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide usage snippets/cs (page does not exist)">5</a>)</small>, <a href="../cs/PySide.html" title="PySide/cs">PySide</a>, PySide examples <a href="../index.php?title=PySide_Beginner_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Beginner Examples/cs (page does not exist)">beginner</a>, <a href="../index.php?title=PySide_Intermediate_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Intermediate Examples/cs (page does not exist)">intermediate</a>, <a href="../index.php?title=PySide_Advanced_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Advanced Examples/cs (page does not exist)">advanced</a></li>
+<li><b>Graphical interface:</b> <a href="../cs/Interface_creation.html" title="Interface creation/cs">Interface creation</a>, <a href="../cs/Dialog_creation.html" title="Dialog creation/cs">Interface creation completely in Python</a> <small>(<a href="../index.php?title=Dialog_creation_with_various_widgets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation with various widgets/cs (page does not exist)">1</a>, <a href="../index.php?title=Dialog_creation_reading_and_writing_files/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation reading and writing files/cs (page does not exist)">2</a>, <a href="../index.php?title=Dialog_creation_setting_colors/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation setting colors/cs (page does not exist)">3</a>, <a href="../index.php?title=Dialog_creation_image_and_animated_GIF/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Dialog creation image and animated GIF/cs (page does not exist)">4</a>, <a href="../index.php?title=PySide_usage_snippets/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide usage snippets/cs (page does not exist)">5</a>)</small>, <a href="../cs/PySide.html" title="PySide/cs">PySide</a>, PySide examples <a href="../index.php?title=PySide_Beginner_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Beginner Examples/cs (page does not exist)">beginner</a>, <a href="../index.php?title=PySide_Intermediate_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Intermediate Examples/cs (page does not exist)">intermediate</a>, <a href="../index.php?title=PySide_Advanced_Examples/cs&amp;action=edit&amp;redlink=1.html" class="new" title="PySide Advanced Examples/cs (page does not exist)">advanced</a></li>
 <li><b>Macros:</b> <a href="../cs/Macros.html" title="Macros/cs">Macros</a>, <a href="../cs/How_to_install_macros.html" title="How to install macros/cs">How to install macros</a></li>
 <li><b>Embedding:</b> <a href="../cs/Embedding_FreeCAD.html" title="Embedding FreeCAD/cs">Embedding FreeCAD</a>, <a href="../cs/Embedding_FreeCADGui.html" title="Embedding FreeCADGui/cs">Embedding FreeCADGui</a></li></ul>
 <hr>
@@ -102,12 +102,12 @@ Separator<span class="w"> </span><span class="o">{</span><span class="w"> </span
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112000342
+Cached time: 20260118050140
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.062 seconds
-Real time usage: 0.120 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.101 seconds
 Preprocessor visited node count: 174/1000000
 Post&#8208;expand include size: 8454/2097152 bytes
 Template argument size: 2906/2097152 bytes
@@ -118,18 +118,18 @@ Unstrip post&#8208;expand size: 5325/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.472      1 -total
- 39.27%   13.538      1 Template:Powerdocnavi/cs
- 15.60%    5.379      1 Template:Top
- 12.40%    4.273      1 Template:Navigation_menu_2
- 12.17%    4.194      1 Template:Docnav
- 11.10%    3.826      1 Template:Docnav/cs
-  7.97%    2.749      2 Template:Code
-  6.64%    2.290      1 Template:TOCright
-  5.24%    1.806      1 Template:Caption
+100.00%   14.217      1 -total
+ 33.85%    4.813      1 Template:Powerdocnavi/cs
+ 16.25%    2.310      1 Template:Navigation_menu_2
+ 13.67%    1.943      1 Template:Docnav/cs
+ 12.66%    1.800      2 Template:Code
+ 11.87%    1.688      1 Template:Docnav
+  8.35%    1.187      1 Template:Top
+  8.17%    1.161      1 Template:Caption
+  7.32%    1.041      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32858-0!canonical and timestamp 20260112000342 and revision id 1736791. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32858-0!canonical and timestamp 20260118050140 and revision id 1736791. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
