--- a/wiki/it/Sketch.html
+++ b/wiki/it/Sketch.html
@@ -90,12 +90,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114140739
+Cached time: 20260118050147
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.158 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.191 seconds
 Preprocessor visited node count: 281/1000000
 Post&#8208;expand include size: 25584/2097152 bytes
 Template argument size: 9455/2097152 bytes
@@ -106,17 +106,17 @@ Unstrip post&#8208;expand size: 1822/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.841      1 -total
- 31.51%    8.772      1 Template:Sketcher_Tools_navi/it
- 21.44%    5.969      1 Template:Userdocnavi/it
- 16.11%    4.484      3 Template:Navigation_menu_2
- 13.40%    3.731      1 Template:Document_objects_navi/it
- 11.15%    3.105      1 Template:TOCright
- 10.83%    3.015      4 Template:Button
-  9.39%    2.613      1 Template:Incode
+100.00%   31.507      1 -total
+ 35.71%   11.251      1 Template:Sketcher_Tools_navi/it
+ 21.50%    6.774      1 Template:Document_objects_navi/it
+ 19.93%    6.280      1 Template:Userdocnavi/it
+ 16.25%    5.119      3 Template:Navigation_menu_2
+ 12.00%    3.781      1 Template:TOCright
+  4.45%    1.402      1 Template:Incode
+  3.88%    1.221      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:171889-0!canonical and timestamp 20260114140739 and revision id 1738187. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:171889-0!canonical and timestamp 20260118050147 and revision id 1738187. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
