--- a/wiki/it/Sketcher_SketchObject.html
+++ b/wiki/it/Sketcher_SketchObject.html
@@ -143,12 +143,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112123046
+Cached time: 20260118050151
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.134 seconds
+CPU time usage: 0.145 seconds
+Real time usage: 0.170 seconds
 Preprocessor visited node count: 1749/1000000
 Post&#8208;expand include size: 39730/2097152 bytes
 Template argument size: 11594/2097152 bytes
@@ -159,19 +159,19 @@ Unstrip post&#8208;expand size: 3349/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.709      1 -total
- 18.98%    8.865     28 Template:Variable
- 16.01%    7.480     18 Template:PropertyView
- 14.38%    6.715      1 Template:Sketcher_Tools_navi/it
- 12.00%    5.607     10 Template:PropertyData
- 11.26%    5.258      3 Template:Navigation_menu_2
-  8.40%    3.922      1 Template:Userdocnavi/it
-  7.54%    3.523      5 Template:Value
-  5.83%    2.721      1 Template:Document_objects_navi/it
-  5.15%    2.408      8 Template:TitleProperty
+100.00%   45.351      1 -total
+ 24.59%   11.151     28 Template:Variable
+ 19.14%    8.679     18 Template:PropertyView
+ 15.46%    7.011     10 Template:PropertyData
+ 11.94%    5.413      1 Template:Sketcher_Tools_navi/it
+  9.83%    4.456      3 Template:Navigation_menu_2
+  7.06%    3.204      1 Template:Userdocnavi/it
+  6.60%    2.991      8 Template:TitleProperty
+  5.40%    2.449      2 Template:Version/it
+  5.07%    2.298     36 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:168820-0!canonical and timestamp 20260112123046 and revision id 1737452. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:168820-0!canonical and timestamp 20260118050151 and revision id 1737452. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
