--- a/wiki/it/Start_up_and_Configuration.html
+++ b/wiki/it/Start_up_and_Configuration.html
@@ -569,12 +569,12 @@ FreeCAD pu&ograve; essere utilizzato in modalit&agrave; console utilizzando l'op
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116110207
+Cached time: 20260118050154
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.144 seconds
+CPU time usage: 0.126 seconds
+Real time usage: 0.159 seconds
 Preprocessor visited node count: 811/1000000
 Post&#8208;expand include size: 14531/2097152 bytes
 Template argument size: 4949/2097152 bytes
@@ -585,19 +585,19 @@ Unstrip post&#8208;expand size: 6522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.748      1 -total
- 21.58%    6.634      1 Template:Userdocnavi/it
- 11.68%    3.591      4 Template:Code
-  8.09%    2.488     36 Template:Incode
-  8.03%    2.468      1 Template:Navigation_menu_2
-  8.01%    2.464      2 Template:Docnav/it
-  7.79%    2.396     41 Template:FileName
-  6.53%    2.009      1 Template:VeryImportantMessage
-  5.73%    1.761      1 Template:MenuCommand
-  5.41%    1.663      1 Template:TOCright
+100.00%   25.423      1 -total
+ 19.73%    5.017      1 Template:Userdocnavi/it
+ 11.80%    3.001      2 Template:Docnav/it
+ 10.06%    2.556      4 Template:Code
+  9.48%    2.409      1 Template:Navigation_menu_2
+  8.69%    2.210     36 Template:Incode
+  8.24%    2.095     41 Template:FileName
+  6.48%    1.647      1 Template:KEY
+  4.83%    1.227      1 Template:TOCright
+  4.80%    1.219      1 Template:Version/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2393-0!canonical and timestamp 20260116110207 and revision id 1739085. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2393-0!canonical and timestamp 20260118050154 and revision id 1739085. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
