--- a/wiki/it/Std_SetAppearance.html
+++ b/wiki/it/Std_SetAppearance.html
@@ -164,12 +164,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260113122543
+Cached time: 20260118050157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.165 seconds
+CPU time usage: 0.133 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 825/1000000
 Post&#8208;expand include size: 35163/2097152 bytes
 Template argument size: 13789/2097152 bytes
@@ -180,19 +180,19 @@ Unstrip post&#8208;expand size: 1558/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.162      1 -total
- 21.38%   10.083      1 Template:Std_Base_navi/it
- 17.52%    8.263      2 Template:Docnav/it
- 16.99%    8.012      2 Template:Navigation_menu_2
- 15.99%    7.542      1 Template:GuiCommand/it
- 10.84%    5.110      7 Template:Value
- 10.60%    4.998      6 Template:PropertyView
-  9.09%    4.286      1 Template:Userdocnavi/it
-  7.06%    3.330      4 Template:KEY
-  6.78%    3.199      6 Template:Variable
+100.00%   31.521      1 -total
+ 36.82%   11.605      1 Template:Std_Base_navi/it
+ 22.61%    7.126      2 Template:Navigation_menu_2
+ 12.67%    3.993      6 Template:PropertyView
+ 12.20%    3.846      1 Template:Userdocnavi/it
+  9.69%    3.054      7 Template:Value
+  9.33%    2.942      1 Template:GuiCommand/it
+  8.54%    2.692      6 Template:Variable
+  5.95%    1.877      2 Template:Docnav/it
+  5.88%    1.854      7 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:4073-0!canonical and timestamp 20260113122543 and revision id 1737825. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:4073-0!canonical and timestamp 20260118050157 and revision id 1737825. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
