--- a/wiki/de/Release_notes_1.1.html
+++ b/wiki/de/Release_notes_1.1.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.1/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.1&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Release_notes_1.1.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.1 (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--high" title="Notes de version 1.1 (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--med" title="Note di rilascio della versione 1.1 (42% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -423,9 +423,7 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD Unterst&
 <p><span id="Material_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Material">Arbeitsbereich Material</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Materialien k&ouml;nnen jetzt in externen Datenspeichern gesichert werden. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull-Request #21047</a></li></ul>
-</div>
+<ul><li>Materialien k&ouml;nnen jetzt in externen Datenspeichern gesichert werden.  Diese Funktion ist experimentell und muss beim Kompilieren des Quellcodes explizit aktiviert werden. Sie ist in den Standard-Builds von FreeCAD nicht verf&uuml;gbar.<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull-Request #21047</a></li></ul>
 <p><span id="Further_Material_improvements"></span>
 </p>
 <h3><span class="mw-headline" id="Weitere_Material-Verbesserungen">Weitere Material-Verbesserungen</span></h3>
@@ -582,35 +580,35 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD Unterst&
 <li>Die Ausrichtung von Skizzen f&uuml;r SVG-Export und Legacy-DXF-Export wurde korrigiert. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull-Request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260117220710
+Cached time: 20260118053043
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.335 seconds
-Real time usage: 1.084 seconds
-Preprocessor visited node count: 618/1000000
+CPU time usage: 0.299 seconds
+Real time usage: 0.357 seconds
+Preprocessor visited node count: 617/1000000
 Post&#8208;expand include size: 3664/2097152 bytes
 Template argument size: 642/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1550/5000000 bytes
+Unstrip post&#8208;expand size: 1554/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.452      1 -total
- 29.53%   15.192      1 Template:TOCright
- 22.23%   11.440      2 Template:PropertyData/de
- 16.81%    8.648      1 Template:VersionMinus/de
-  9.61%    4.947      1 Template:VersionPlus/de
-  8.73%    4.494      2 Template:Variable
-  8.34%    4.291      2 Template:Message
-  4.00%    2.057      5 Template:KEY
-  3.96%    2.037      1 Template:Incode
-  3.34%    1.719      2 Template:FileName
+100.00%   24.246      1 -total
+ 21.73%    5.269      2 Template:PropertyData/de
+ 17.53%    4.250      2 Template:Message
+ 15.84%    3.840      1 Template:Incode
+ 11.27%    2.733      1 Template:VersionPlus/de
+ 10.41%    2.525      2 Template:Variable
+  8.42%    2.041      2 Template:FileName
+  8.39%    2.034      1 Template:VersionMinus/de
+  6.97%    1.689      1 Template:VeryImportantMessage
+  6.31%    1.530      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363975-0!canonical and timestamp 20260117220709 and revision id 1739733. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363975-0!canonical and timestamp 20260118053042 and revision id 1739748. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
