--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -387,7 +387,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </ul>
 </center>
 </div>
-<div class="mw-translate-fuzzy">
 <ul><li>Standardm&auml;&szlig;ig ist dieser Abschnitt ausgeblendet. Das Fenster wird angezeigt, wenn das Optionsfeld <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clock<span></span></span> aktiviert ist.</li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_16.png&amp;filetimestamp=20200601143709&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_16.png" decoding="async" width="492" height="452" class="mw-file-element" data-file-width="492" data-file-height="452"></a><figcaption></figcaption></figure>
@@ -399,7 +398,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <li>Die Schaltfl&auml;chen <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> oder <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
 <li>Der Bereich <b>Clock</b> (Uhr) wird aktiviert.</li></ul>
 <div style="clear:both"></div>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_19.png&amp;filetimestamp=20200601140458&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_19.png" decoding="async" width="501" height="131" class="mw-file-element" data-file-width="501" data-file-height="131"></a><figcaption></figcaption></figure>
 <ul><li><b>Radius of support</b>&nbsp;: If a value is given, support will be created (default 0).</li>
@@ -976,13 +974,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215900
+Cached time: 20260118053105
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.528 seconds
-Real time usage: 1.788 seconds
-Preprocessor visited node count: 1596/1000000
+CPU time usage: 0.376 seconds
+Real time usage: 0.638 seconds
+Preprocessor visited node count: 1595/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -992,19 +990,19 @@ Unstrip post&#8208;expand size: 66507/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1146.881      1 -total
-  1.57%   18.027      1 Template:Draft_Tools_navi/de
-  1.42%   16.320     10 Template:CheckBox
-  1.37%   15.740     18 Template:FALSE
-  0.94%   10.737      3 Template:ColoredText
-  0.91%   10.446      1 Template:Userdocnavi/de
-  0.86%    9.897     10 Template:Code
-  0.79%    9.062      1 Template:Macro/de
-  0.76%    8.667      2 Template:Navigation_menu_2
-  0.71%    8.101     14 Template:TRUE
+100.00%  437.921      1 -total
+ 40.43%  177.052     10 Template:Code
+  3.06%   13.422      1 Template:Draft_Tools_navi/de
+  0.96%    4.213      1 Template:Macro/de
+  0.96%    4.187     10 Template:CheckBox
+  0.81%    3.562      2 Template:Navigation_menu_2
+  0.79%    3.467      6 Template:SpinBox
+  0.75%    3.270      3 Template:ColoredText
+  0.66%    2.885     18 Template:FALSE
+  0.65%    2.846      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260117215858 and revision id 1739696. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260118053104 and revision id 1739750. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
