--- a/wiki/de/PartDesign_SubtractivePipe.html
+++ b/wiki/de/PartDesign_SubtractivePipe.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">PartDesign SubtractivePipe/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-PartDesign+SubtractivePipe&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../PartDesign_SubtractivePipe.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="PartDesign SubtractivePipe (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign SubtractivePipe/tr (6% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign Barrido sustractivo (56% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
@@ -117,7 +117,6 @@ Subtraktives Rohr wird h&auml;ufig zusammen mit <a href="../de/Part_Helix.html" 
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>Um die Form des Rohres besser steuern zu k&ouml;nnen, wird empfohlen, dass alle Querschnitte mit derselben Anzahl von Abschnitten erstellt werden. Beispielsweise sollte f&uuml;r ein Rohr zwischen einem Rechteck und einem Kreis der Kreis in vier verbundene B&ouml;gen aufgebrochen werden.</li>
 <li>Das Rohr kann in einem einzelnen Knotenpunkt (<a href="../de/Glossary.html#Vertex" title="Glossary/de">Vertex</a>) einer Skizze oder eines K&ouml;rpers beginnen oder enden.</li>
 <li>Wird ein <a href="../de/Glossary.html#Vertex" title="Glossary/de">Knotenpunkt</a> verwendet, muss er in den meisten F&auml;llen als letzter Querschnitt des Rohres verwendet werden. Die Reihenfolge der Querschnitte kann ge&auml;ndert werden, indem sie in der Liste verschoben werden.</li>
@@ -126,8 +125,8 @@ Subtraktives Rohr wird h&auml;ufig zusammen mit <a href="../de/Part_Helix.html" 
 <li>Es kann zu Problemen f&uuml;hren, wenn ein Querschnitt in 3D nicht senkrecht auf dem Pfad steht.</li>
 <li>Ein Querschnitt kann nicht mit dem unmittelbar vorhergehenden Querschnitt auf derselben Ebene liegen.</li>
 <li>Ein Querschnitt darf keine aufgetrennten oder sich kreuzende Schlaufen enthalten.</li>
-<li>Enth&auml;lt die Skizze innere Geometrien, sollte die Reihenfolge, in der die Skizzengeometrie erstellt wird, f&uuml;r alle Querschnitte identisch sein. Entweder werden alle Querschnitte mit der inneren Geometrie begonnen oder alle mit der &auml;u&szlig;eren Geometrie. Andernfalls wird ein ung&uuml;ltiges Rohrobjekt erstellt, bei dem sich innere und &auml;u&szlig;ere W&auml;nde durchdringen.</li></ul>
-</div>
+<li>Enth&auml;lt die Skizze innere Geometrien, sollte die Reihenfolge, in der die Skizzengeometrie erstellt wird, f&uuml;r alle Querschnitte identisch sein. Entweder werden alle Querschnitte mit der inneren Geometrie begonnen oder alle mit der &auml;u&szlig;eren Geometrie. Andernfalls wird ein ung&uuml;ltiges Rohrobjekt erstellt, bei dem sich innere und &auml;u&szlig;ere W&auml;nde durchdringen.</li>
+<li>Die Fehlermeldung "A fatal error occurred when making the pipe" - &bdquo;Beim Erstellen des Rohrs ist ein schwerwiegender Fehler aufgetreten&ldquo; kann darauf hinweisen, dass eine dieser Anforderungen nicht erf&uuml;llt wurde.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -175,35 +174,35 @@ Subtraktives Rohr wird h&auml;ufig zusammen mit <a href="../de/Part_Helix.html" 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117220843
+Cached time: 20260118053243
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.183 seconds
-Preprocessor visited node count: 580/1000000
+CPU time usage: 0.090 seconds
+Real time usage: 0.130 seconds
+Preprocessor visited node count: 579/1000000
 Post&#8208;expand include size: 21962/2097152 bytes
 Template argument size: 7177/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2257/5000000 bytes
+Unstrip post&#8208;expand size: 2261/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.365      1 -total
- 24.39%    5.944     10 Template:PropertyData
- 20.80%    5.068      2 Template:Docnav/de
- 17.86%    4.351      1 Template:PartDesign_Tools_navi/de
- 16.88%    4.112     10 Template:Variable
- 10.58%    2.577      1 Template:GuiCommand/de
-  6.39%    1.557      6 Template:Button
-  5.91%    1.439      2 Template:Navigation_menu_2
-  5.80%    1.414      1 Template:Userdocnavi/de
-  4.58%    1.115      5 Template:Emphasis
+100.00%   26.472      1 -total
+ 21.76%    5.761     10 Template:PropertyData
+ 21.71%    5.747      1 Template:PartDesign_Tools_navi/de
+ 14.16%    3.749     10 Template:Variable
+ 14.01%    3.708      1 Template:GuiCommand/de
+ 11.42%    3.024      2 Template:Docnav/de
+  7.67%    2.030      1 Template:Userdocnavi/de
+  7.42%    1.964      6 Template:Button
+  7.18%    1.901      2 Template:Navigation_menu_2
+  5.27%    1.396      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:91560-0!canonical and timestamp 20260117220843 and revision id 1739746. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:91560-0!canonical and timestamp 20260118053243 and revision id 1739752. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
