--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -107,9 +107,7 @@ Makro ArbeitsFunktionen
 </ul>
 </center>
 <p><br>
-</p>
-<div class="mw-translate-fuzzy">
-<p><b>Reiter Origin</b> (Ursprung)
+<b>Reiter Origin</b> (Ursprung)
 </p>
 <table>
 <tbody><tr>
@@ -119,7 +117,6 @@ Makro ArbeitsFunktionen
 <ul><li><b>Reiter Origin</b> (Ursprung)</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Origin</span>&nbsp;: Im Ursprung erstellen: einen Punkt und eine X-, Y- und Z-Achse sowie XZ-, XY- und YZ-Ebenen. Der Ursprung der Achsen, Punkt und Ebenen sind direkt auf ausgeblendet gesetzt.</li></ul>
 </td></tr></tbody></table>
-</div>
 <p><b>Reiter Points</b> (Punkte)
 </p>
 <table>
@@ -462,13 +459,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260117220358
+Cached time: 20260118053332
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.167 seconds
-Real time usage: 0.796 seconds
-Preprocessor visited node count: 677/1000000
+CPU time usage: 0.182 seconds
+Real time usage: 0.254 seconds
+Preprocessor visited node count: 676/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
 Highest expansion depth: 5/100
@@ -478,18 +475,18 @@ Unstrip post&#8208;expand size: 21859/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  456.630      1 -total
-  3.89%   17.783      1 Template:MenuCommand
-  3.33%   15.216     54 Template:KEY
-  2.51%   11.440      1 Template:Macro/de
-  2.45%   11.210      1 Template:Userdocnavi/de
-  2.37%   10.807      1 Template:Caption
-  1.33%    6.094      1 Template:Button
-  0.95%    4.345     11 Template:Clear
-  0.50%    2.291      1 Template:Navigation_menu_2
+100.00%  133.429      1 -total
+  4.90%    6.536      1 Template:Macro/de
+  4.70%    6.270      1 Template:Userdocnavi/de
+  3.49%    4.652     54 Template:KEY
+  2.31%    3.085      1 Template:Caption
+  2.11%    2.818     11 Template:Clear
+  2.06%    2.752      1 Template:Button
+  1.78%    2.376      1 Template:MenuCommand
+  1.70%    2.265      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260117220357 and revision id 1739715. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053331 and revision id 1739754. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
