Updated page Macro WorkFeatures/de

--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -257,12 +257,8 @@ Makro ArbeitsFunktionen
 </p><p>Werkzeugleistensymbol <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b><a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature">Herunterladen der neusten Version auf GitHub</a></b> , 
 muss die ZIP-Datei entpackt werden und alle Dateien in das Makroverzeichnis kopiert werden.
-</p>
-<div class="mw-translate-fuzzy">
-<p><b>PS: Dieses Makro befindet sich noch in der Entwicklung. Diese Seite bitte regelm&auml;&szlig;ig besuchen, um sicher zu sein, dass man die neueste Version erh&auml;lt.</b>
-</p>
-</div>
-<p><br>
+</p><p><b>PS: Dieses Makro befindet sich noch in der Entwicklung. Diese Seite bitte regelm&auml;&szlig;ig besuchen, um sicher zu sein, dass man die neueste Version erh&auml;lt.</b>
+</p><p><br>
 </p>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_GitHub_00.png&amp;filetimestamp=20160917094640&amp;.html" class="mw-file-description" title="Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP"><img alt="Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP" src="../File/Macro_Work_Features_GitHub_00.png" decoding="async" width="640" height="415" class="mw-file-element" data-file-width="1060" data-file-height="687"></a><figcaption>Herunterladen von GitHub durch Dr&uuml;cken der Schaltfl&auml;che Download ZIP</figcaption></figure>
 <div style="clear:both"></div>
@@ -453,13 +449,13 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260118053448
+Cached time: 20260118053504
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.165 seconds
-Real time usage: 0.193 seconds
-Preprocessor visited node count: 673/1000000
+CPU time usage: 0.170 seconds
+Real time usage: 0.366 seconds
+Preprocessor visited node count: 672/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
 Highest expansion depth: 5/100
@@ -469,18 +465,18 @@ Unstrip post&#8208;expand size: 21859/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   93.891      1 -total
-  4.27%    4.012      1 Template:Userdocnavi/de
-  3.74%    3.515     54 Template:KEY
-  3.26%    3.057      1 Template:Macro/de
-  2.29%    2.154     11 Template:Clear
-  1.89%    1.773      1 Template:Caption
-  1.57%    1.472      1 Template:Button
-  1.50%    1.411      1 Template:MenuCommand
-  1.45%    1.366      1 Template:Navigation_menu_2
+100.00%  206.703      1 -total
+  5.48%   11.318      1 Template:Macro/de
+  2.81%    5.800      1 Template:Userdocnavi/de
+  2.24%    4.627      1 Template:Button
+  2.23%    4.610     54 Template:KEY
+  2.05%    4.239      1 Template:Caption
+  1.55%    3.197     11 Template:Clear
+  1.24%    2.569      1 Template:MenuCommand
+  1.03%    2.135      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053448 and revision id 1739760. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260118053504 and revision id 1739762. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
