--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -5,7 +5,6 @@
 <li><a href="../hr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCSpring Helix Variable (49% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Molla a spirale variabile (51% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: FCSpring Zmienna spirala (1% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -77,7 +76,6 @@ Macro FCSpring Helix Variable
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -514,13 +512,13 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117220454
+Cached time: 20260118053552
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.232 seconds
-Real time usage: 0.438 seconds
-Preprocessor visited node count: 952/1000000
+CPU time usage: 0.235 seconds
+Real time usage: 0.284 seconds
+Preprocessor visited node count: 951/1000000
 Post&#8208;expand include size: 24597/2097152 bytes
 Template argument size: 4659/2097152 bytes
 Highest expansion depth: 6/100
@@ -530,19 +528,19 @@ Unstrip post&#8208;expand size: 28753/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  161.559      1 -total
-  4.64%    7.498      6 Template:Code
-  3.08%    4.978      1 Template:Macro/de
-  2.09%    3.376      1 Template:Codeextralink
-  1.36%    2.204     12 Template:SpinBox
-  1.28%    2.072      8 Template:CheckBox
-  1.27%    2.055     25 Template:Button
-  1.09%    1.767      1 Template:Caption
-  1.01%    1.638      1 Template:KEY
-  0.86%    1.391     14 Template:Clear
+100.00%  119.654      1 -total
+  3.78%    4.525      6 Template:Code
+  2.84%    3.396     12 Template:SpinBox
+  2.47%    2.955      1 Template:Macro/de
+  2.16%    2.579      1 Template:Caption
+  2.14%    2.562      8 Template:CheckBox
+  2.03%    2.434     25 Template:Button
+  1.81%    2.169      2 Template:RadioButton
+  1.69%    2.022     14 Template:Clear
+  1.68%    2.009      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260117220454 and revision id 1739725. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053552 and revision id 1739768. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
