Updated page Macro FCSpring Helix Variable/de

--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -201,7 +201,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 <p><span id="Command"></span>
 </p>
 <h4><span class="mw-headline" id="Befehl">Befehl</span></h4>
-<div class="mw-translate-fuzzy">
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02.png&amp;filetimestamp=20160904162206&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load</span>&nbsp;: Die Schaltfl&auml;che Load &ouml;ffnet ein Dialogfeld zum Lesen einer Datei <b>.FCSpring</b>.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_03.png&amp;filetimestamp=20160904162346&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_03.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Save</span>&nbsp;: Die Schaltfl&auml;che Save &ouml;ffnet ein Dialogfeld zum Speichern einer Datei <b>.FCSpring</b> mit Federkonfiguration modifizieren oder nicht.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_02b.png&amp;filetimestamp=20160904162239&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_02b.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Load Coordinates</span>&nbsp;: Ein Dialogfeld &ouml;ffnen, um eine Datei <b>.FCSpringCoor</b> (alle Koordinaten der Punkte der Feder) zu lesen.</li>
@@ -210,7 +209,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_05.png&amp;filetimestamp=20160904162655&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_05.png" decoding="async" width="16" height="15" class="mw-file-element" data-file-width="47" data-file-height="45"></a></span> Reset</span>&nbsp;: Das Makro auf die Standardkonfiguration zur&uuml;cksetzen.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_06.png&amp;filetimestamp=20160904162729&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_06.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Launch</span>&nbsp;: Das Makro starten und die konfigurierte Feder erstellen.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Help</span>&nbsp;: Diese Schaltfl&auml;che zeigt die Wiki-Seite im FreeCAD-Browser an.</li></ul>
-</div>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_05.png&amp;filetimestamp=20200419154037&amp;.html" class="mw-file-description"><img src="../File/Macro_FCSpring_Helix_Variable_05.png" decoding="async" width="429" height="134" class="mw-file-element" data-file-width="429" data-file-height="134"></a></span>
 </p>
 <div style="clear:both"></div>
@@ -508,13 +506,13 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118053640
+Cached time: 20260118053700
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.219 seconds
-Real time usage: 0.261 seconds
-Preprocessor visited node count: 949/1000000
+CPU time usage: 0.250 seconds
+Real time usage: 0.363 seconds
+Preprocessor visited node count: 948/1000000
 Post&#8208;expand include size: 24597/2097152 bytes
 Template argument size: 4659/2097152 bytes
 Highest expansion depth: 6/100
@@ -524,19 +522,19 @@ Unstrip post&#8208;expand size: 28753/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   96.104      1 -total
-  4.56%    4.383      6 Template:Code
-  3.12%    2.998      1 Template:Macro/de
-  2.93%    2.813     12 Template:SpinBox
-  2.39%    2.295      8 Template:CheckBox
-  2.10%    2.019      1 Template:Codeextralink
-  1.87%    1.799     25 Template:Button
-  1.84%    1.770      2 Template:RadioButton
-  1.70%    1.632      1 Template:Caption
-  1.63%    1.571     14 Template:Clear
+100.00%  187.245      1 -total
+  7.02%   13.148      8 Template:CheckBox
+  4.97%    9.313     12 Template:SpinBox
+  4.29%    8.040      1 Template:Macro/de
+  4.20%    7.856      6 Template:Code
+  2.90%    5.438      1 Template:Codeextralink
+  2.59%    4.844      1 Template:KEY
+  2.12%    3.972      2 Template:RadioButton
+  1.88%    3.520     25 Template:Button
+  1.83%    3.429      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053639 and revision id 1739772. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053659 and revision id 1739774. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
