Updated page Macro FCSpring Helix Variable/de

--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -230,12 +230,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 </p>
 <h2><span class="mw-headline" id="Beispiel_Ausgabefenster">Beispiel Ausgabefenster</span></h2>
 <p>Wenn das Makro gestartet wird, wird die vollst&auml;ndige Liste der Umdrehungen in Tabellenform angezeigt.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Hier die Daten der oben gezeigten Feder, angezeigt in der Berichtsansicht
+</p><p>Hier die Daten der oben gezeigten Feder, angezeigt im Ausgabefenster
 <a href="../index.php?title=Datei;Macro_FCSpring_Helix_Variable_08.png&amp;action=edit&amp;redlink=1.html" class="new" title="Datei:Macro FCSpring Helix Variable 08.png (page does not exist)">Datei:Macro FCSpring Helix Variable 08.png</a>
 </p>
-</div>
 <div style="clear:both"></div>
 <p><span id="Icon"></span>
 </p>
@@ -506,13 +503,13 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118053700
+Cached time: 20260118053735
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.250 seconds
-Real time usage: 0.363 seconds
-Preprocessor visited node count: 948/1000000
+CPU time usage: 0.225 seconds
+Real time usage: 0.263 seconds
+Preprocessor visited node count: 947/1000000
 Post&#8208;expand include size: 24597/2097152 bytes
 Template argument size: 4659/2097152 bytes
 Highest expansion depth: 6/100
@@ -522,19 +519,19 @@ Unstrip post&#8208;expand size: 28753/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  187.245      1 -total
-  7.02%   13.148      8 Template:CheckBox
-  4.97%    9.313     12 Template:SpinBox
-  4.29%    8.040      1 Template:Macro/de
-  4.20%    7.856      6 Template:Code
-  2.90%    5.438      1 Template:Codeextralink
-  2.59%    4.844      1 Template:KEY
-  2.12%    3.972      2 Template:RadioButton
-  1.88%    3.520     25 Template:Button
-  1.83%    3.429      1 Template:Caption
+100.00%  109.622      1 -total
+  2.94%    3.218      6 Template:Code
+  2.85%    3.128      1 Template:Macro/de
+  2.42%    2.652     12 Template:SpinBox
+  2.32%    2.539      8 Template:CheckBox
+  2.15%    2.359      2 Template:RadioButton
+  2.14%    2.349      1 Template:Codeextralink
+  1.71%    1.876     25 Template:Button
+  1.27%    1.394     14 Template:Clear
+  1.19%    1.302      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053659 and revision id 1739774. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053734 and revision id 1739776. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
