Created page with "*Trägheitsmoment und diese Koordinaten Länge und Gewicht *Die Schaltfläche erstellt einen Punkt, eine Achse, eine Ebene, eine Kopie der Vektorachse aus '''FreeCAD.Vector(-24.0, 240.0, 7.0)''' ''(siehe Abschnitt 13)'' ** action line 1 : {{LineEdit|x1}}, {{LineEdit|y1}}, {{LineEdit|z1}}, {{LineEdit|0.0}} ** action line 2 : {{LineEdit|x2}}, {{LineEdit|y2}}, {{LineEdit|z2}}, {{LineEdit|0.0}} ** action line 3 : {{LineEdit|x3}}, {{LineEdit|y3}}, {{LineEdit|z3}}, {{LineEdit|..."

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -293,21 +293,18 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span id="Abschnitt_11:_Tr.C3.A4gheit"></span><span class="mw-headline" id="Abschnitt_11:_Tr&auml;gheit">Abschnitt 11: Tr&auml;gheit</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Inertia_00.png&amp;filetimestamp=20221021103928&amp;.html" class="mw-file-description" title="FCInfo Tr&auml;gheit"><img alt="FCInfo Tr&auml;gheit" src="../File/Macro_FCInfo_Inertia_00.png" decoding="async" width="398" height="428" class="mw-file-element" data-file-width="398" data-file-height="428"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Moment of inertia and these coordinates length and weigth</li>
-<li>The button creates on point, axis, plane, copy vector axis form <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b> <i>(see Sector 13)</i>
+<ul><li>Tr&auml;gheitsmoment und diese Koordinaten L&auml;nge und Gewicht</li>
+<li>Die Schaltfl&auml;che erstellt einen Punkt, eine Achse, eine Ebene, eine Kopie der Vektorachse aus <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b> <i>(siehe Abschnitt 13)</i>
 <ul><li>action line 1&nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">x1</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">y1</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">z1</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.0</span></li>
 <li>action line 2&nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">x2</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">y2</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">z2</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.0</span></li>
 <li>action line 3&nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">x3</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">y3</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">z3</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.0</span></li>
 <li>action 4 diagonal&nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">x1</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">y2</span>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">z3</span></li></ul></li></ul>
-<p>same for length and weigth
+<p>Gleiches f&uuml;r L&auml;nge und Gewicht
 </p>
-<ul><li>Determinant 1 &nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">4629629629629.633</span> computes the determinant of the matrix, in <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Scientific_notation">scientific value</a></li>
-<li>Determinant 2 &nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">4629629629629.6328125</span> computes the determinant of the matrix, in decimal value</li></ul>
-<p><i>(you can checked to <code>false</code> the variable <b>switch_setVisible_GBox_011_Inertia</b> for hidden the Box)</i>
-</p>
-</div>
-<p><span id="Sector_12:_SpreadSheet"></span>
+<ul><li>Determinant 1 &nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">4629629629629.633</span> berechnet die Determinante der Matrix in <a rel="nofollow" class="external text" href="https://de.wikipedia.org/wiki/Wissenschaftliche_Notation">wissenschaftlicher Notation</a></li>
+<li>Determinant 2 &nbsp;: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">4629629629629.6328125</span> berechnet die Determinante der Matrix als Dezimalwert</li></ul>
+<p><i>(Die Variable <b>switch_setVisible_GBox_011_Inertia</b> kann auf <code>false</code> gesetzt werden, um den Rahmen auszublenden.)</i>
+</p><p><span id="Sector_12:_SpreadSheet"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_12:_Tabelle">Abschnitt 12: Tabelle</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Disabled_module_00.png&amp;filetimestamp=20221021103851&amp;.html" class="mw-file-description" title="FCInfo ausgeschaltet"><img alt="FCInfo ausgeschaltet" src="../File/Macro_FCInfo_Disabled_module_00.png" decoding="async" width="396" height="118" class="mw-file-element" data-file-width="396" data-file-height="118"></a></span>
@@ -706,13 +703,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118054542
+Cached time: 20260118054901
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.228 seconds
-Real time usage: 0.366 seconds
-Preprocessor visited node count: 1536/1000000
+CPU time usage: 0.256 seconds
+Real time usage: 0.342 seconds
+Preprocessor visited node count: 1535/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5252/2097152 bytes
 Highest expansion depth: 6/100
@@ -722,19 +719,19 @@ Unstrip post&#8208;expand size: 15827/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  104.281      1 -total
-  6.75%    7.035      1 Template:CodeDownload
-  6.31%    6.575     10 Template:CheckBox
-  5.80%    6.049     10 Template:Code
-  5.79%    6.042      1 Template:Codeextralink
-  4.66%    4.857      8 Template:RadioButton
-  4.62%    4.821      1 Template:Macro/de
-  4.51%    4.706     44 Template:LineEdit
-  3.64%    3.795      1 Template:Caption
-  3.20%    3.342      3 Template:Incode
+100.00%   76.292      1 -total
+  8.29%    6.328     10 Template:CheckBox
+  6.40%    4.883     10 Template:Code
+  6.24%    4.760      8 Template:RadioButton
+  5.35%    4.081      5 Template:SpinBox
+  4.62%    3.524      1 Template:Codeextralink
+  4.33%    3.302      1 Template:Macro/de
+  4.17%    3.184     44 Template:LineEdit
+  3.88%    2.960      1 Template:CodeDownload
+  3.25%    2.481      4 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260118054541 and revision id 1739783. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260118054900 and revision id 1739785. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
